--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nvidia-graphics-drivers\n"
 "Report-Msgid-Bugs-To: nvidia-graphics-drivers@packages.debian.org\n"
-"POT-Creation-Date: 2014-10-05 18:35+0200\n"
+"POT-Creation-Date: 2014-10-20 02:45+0200\n"
 "PO-Revision-Date: 2012-06-21 14:03+0100\n"
 "Last-Translator: Ivan Masár <helix84@centrum.sk>\n"
 "Language-Team: Slovak <debian-l10n-slovak@lists.debian.org>\n"
@@ -18,7 +18,11 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../libgl1-nvidia-glx.templates:2001
+#. Translators, do not translate the ${substitution} ${variables}.
+#. ${vendor} will be substituted with 'NVIDIA' or 'Fglrx' (without quotes, of
+#. course), ${free_name} will become 'Nouveau' or 'Radeon' (no quotes, again)
+#. and the ${*driver} variables will be replaced with package names.
+#: ../libgl1-nvidia-glx.templates:3001
 msgid "Install ${vendor} driver despite unsupported graphics card?"
 msgstr ""
 "Nainštalovať ovládač ${vendor} napriek tou, že máte nepodporovanú grafickú "
@@ -26,49 +30,48 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../libgl1-nvidia-glx.templates:2001
+#: ../libgl1-nvidia-glx.templates:3001
 #, fuzzy
 #| msgid ""
 #| "The following graphics chipset found in your system is no longer handled "
-#| "by the ${vendor} driver:You may wish to keep ${vendor} (for instance to drive "
-#| "some other card), but the above card won't be usable."
+#| "by the ${vendor} driver:You may wish to keep ${vendor} (for instance to "
+#| "drive some other card), but the above card won't be usable."
 msgid ""
 "This system has a graphics card which is no longer handled by the ${vendor} "
-"driver (package ${driver}). You may wish to keep the package installed - "
-"for instance to drive some other card - but the card with the following "
-"chipset won't be usable:"
+"driver (package ${driver}). You may wish to keep the package installed - for "
+"instance to drive some other card - but the card with the following chipset "
+"won't be usable:"
 msgstr ""
-"Ovládač ${vendor} už nedokáže pracovať s nasledovnou grafickou čipovou sadou, "
-"ktorá sa nachádza vo vašom systéme:Možno si budete chcieť ponechať ${vendor} "
-"(napríklad aby ovládal nejakú inú kartu), ale hore uvedená karta nebude "
-"použiteľná."
+"Ovládač ${vendor} už nedokáže pracovať s nasledovnou grafickou čipovou "
+"sadou, ktorá sa nachádza vo vašom systéme:Možno si budete chcieť ponechať "
+"${vendor} (napríklad aby ovládal nejakú inú kartu), ale hore uvedená karta "
+"nebude použiteľná."
 
 #. Type: boolean
 #. Description
-#: ../libgl1-nvidia-glx.templates:2001
+#: ../libgl1-nvidia-glx.templates:3001
 #, fuzzy
 #| msgid ""
-#| "The above card requires the free ${free_name} driver in the package ${free_driver}."
+#| "The above card requires the free ${free_name} driver in the package "
+#| "${free_driver}."
 msgid ""
 "The above card requires either the non-free legacy ${vendor} driver (package "
-"${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
-")."
+"${legacy_driver}) or the free ${free_name} driver (package ${free_driver})."
 msgstr ""
-"Hore uvedená karta vyžaduje slobodný ovládač ${free_name} z balíka ${free_driver}"
-"."
+"Hore uvedená karta vyžaduje slobodný ovládač ${free_name} z balíka "
+"${free_driver}."
 
 #. Type: boolean
 #. Description
-#: ../libgl1-nvidia-glx.templates:2001
+#: ../libgl1-nvidia-glx.templates:3001
 #, fuzzy
 #| msgid ""
-#| "Before the ${free_name} driver can be used you must remove ${vendor} configuration "
-#| "from xorg.conf (and xorg.conf.d/) and purge (not just remove) the ${driver}"
-#| " package."
+#| "Before the ${free_name} driver can be used you must remove ${vendor} "
+#| "configuration from xorg.conf (and xorg.conf.d/) and purge (not just "
+#| "remove) the ${driver} package."
 msgid ""
-"Before the ${free_name} driver can be used you must remove ${vendor} configuration "
-"from xorg.conf (and xorg.conf.d/)."
+"Before the ${free_name} driver can be used you must remove ${vendor} "
+"configuration from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Predtým, než budete môcť používať ovládač ${free_name} musíte odstrániť z xorg."
-"conf (a z xorg.conf.d/) konfiguráciu ${vendor}"
-
+"Predtým, než budete môcť používať ovládač ${free_name} musíte odstrániť z "
+"xorg.conf (a z xorg.conf.d/) konfiguráciu ${vendor}"
