--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nvidia-graphics-drivers\n"
 "Report-Msgid-Bugs-To: nvidia-graphics-drivers@packages.debian.org\n"
-"POT-Creation-Date: 2014-10-05 18:35+0200\n"
+"POT-Creation-Date: 2014-10-20 02:45+0200\n"
 "PO-Revision-Date: 2012-09-30 17:30+01:00\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <debian-l10n-danish@lists.debian.org>\n"
@@ -18,19 +18,23 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../libgl1-nvidia-glx.templates:2001
+#. Translators, do not translate the ${substitution} ${variables}.
+#. ${vendor} will be substituted with 'NVIDIA' or 'Fglrx' (without quotes, of
+#. course), ${free_name} will become 'Nouveau' or 'Radeon' (no quotes, again)
+#. and the ${*driver} variables will be replaced with package names.
+#: ../libgl1-nvidia-glx.templates:3001
 msgid "Install ${vendor} driver despite unsupported graphics card?"
 msgstr ""
 "Installer ${vendor}-driver på trods af at grafikkort ikke er understøttet?"
 
 #. Type: boolean
 #. Description
-#: ../libgl1-nvidia-glx.templates:2001
+#: ../libgl1-nvidia-glx.templates:3001
 msgid ""
 "This system has a graphics card which is no longer handled by the ${vendor} "
-"driver (package ${driver}). You may wish to keep the package installed - "
-"for instance to drive some other card - but the card with the following "
-"chipset won't be usable:"
+"driver (package ${driver}). You may wish to keep the package installed - for "
+"instance to drive some other card - but the card with the following chipset "
+"won't be usable:"
 msgstr ""
 "De følgende grafikchipsæt i dit system er ikke længere understøttet af "
 "${vendor}-driveren (pakke ${driver}). Du kan beholde pakken installeret for "
@@ -39,11 +43,10 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../libgl1-nvidia-glx.templates:2001
+#: ../libgl1-nvidia-glx.templates:3001
 msgid ""
 "The above card requires either the non-free legacy ${vendor} driver (package "
-"${legacy_driver}) or the free ${free_name} driver (package ${free_driver}"
-")."
+"${legacy_driver}) or the free ${free_name} driver (package ${free_driver})."
 msgstr ""
 "Det ovenstående kort kræver enten den ikkefrie forældede ${vendor}-driver "
 "(pakke ${legacy_driver}) eller den frie ${free_name}driver (pakken "
@@ -51,16 +54,10 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../libgl1-nvidia-glx.templates:2001
+#: ../libgl1-nvidia-glx.templates:3001
 msgid ""
-"Before the ${free_name} driver can be used you must remove ${vendor} configuration "
-"from xorg.conf (and xorg.conf.d/)."
+"Before the ${free_name} driver can be used you must remove ${vendor} "
+"configuration from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Før ${free_name}driveren kan bruges, skal du fjerne ${vendor}-konfigurationen fra "
-"xorg.conf (og xorg.conf.d/)."
-
-
-
-
-
-
+"Før ${free_name}driveren kan bruges, skal du fjerne ${vendor}-"
+"konfigurationen fra xorg.conf (og xorg.conf.d/)."
