--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
   * d/rules{,.defs}: Drop MULTIARCH switch - this is always enabled nowadays.
   * libgl1-nvidia-glx.preinst: Rework the legacy check. Use more debconf
     variable substitutions for easy reuse of the translations.
+  * conftest.h: DRM is only supported on Linux >= 3.9.  (Closes: #765679)
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 12 Oct 2014 03:26:12 +0200
 
