--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.46-2) unstable; urgency=medium
 
   * Add libcuda1 dependency to libraries that seem to be capable of doing
     dlopen("libcuda.so") or dlopen("libcuda.so.1").
@@ -28,7 +28,7 @@ nvidia-graphics-drivers (340.46-2) UNRELEASED; urgency=medium
     variable substitutions for easy reuse of the translations.
   * conftest.h: DRM is only supported on Linux >= 3.9.  (Closes: #765679)
 
- -- Andreas Beckmann <anbe@debian.org>  Sun, 12 Oct 2014 03:26:12 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Mon, 20 Oct 2014 10:30:50 +0200
 
 nvidia-graphics-drivers (340.46-1) unstable; urgency=medium
 
