updated French (fr) debconf translations by Christian Perrier
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5105 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (340.46-3) UNRELEASED; urgency=medium
+
+  * Updated French (fr) debconf translations by Christian Perrier.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 21 Oct 2014 13:49:13 +0200
+
 nvidia-graphics-drivers (340.46-2) unstable; urgency=medium
 
   * Add libcuda1 dependency to libraries that seem to be capable of doing
