--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -3,20 +3,20 @@
 # This file is distributed under the same license as the nvidia-driver package.
 #
 # Translators:
-# Christian Perrier <bubulle@debian.org>, 2009, 2012.
+# Christian Perrier <bubulle@debian.org>, 2009, 2012, 2014.
 msgid ""
 msgstr ""
 "Project-Id-Version: nvidia-graphics-drivers\n"
 "Report-Msgid-Bugs-To: nvidia-graphics-drivers@packages.debian.org\n"
 "POT-Creation-Date: 2014-10-20 02:45+0200\n"
-"PO-Revision-Date: 2012-09-21 07:06+0200\n"
+"PO-Revision-Date: 2014-10-21 09:35+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.4\n"
+"X-Generator: Lokalize 1.5\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #. Type: boolean
@@ -30,22 +30,19 @@ msgid "Install ${vendor} driver despite unsupported graphics card?"
 msgstr ""
 "Faut-il installer le pilote ${vendor} avec une carte graphique non gérée ?"
 
-# in my bulk variable substitutions this did not match correctly here ...
-# the (package ${driver}) reference is missing
 #. Type: boolean
 #. Description
 #: ../libgl1-nvidia-glx.templates:3001
-#, fuzzy
 msgid ""
 "This system has a graphics card which is no longer handled by the ${vendor} "
 "driver (package ${driver}). You may wish to keep the package installed - for "
 "instance to drive some other card - but the card with the following chipset "
 "won't be usable:"
 msgstr ""
-"Les jeux de composants graphiques suivants trouvés sur cette machine ne sont "
-"plus gérés par le pilote ${vendor}. Vous pouvez préférer garder ${vendor} "
+"La carte graphique de cette machine n'est plus gérée par le pilote ${vendor} "
+"(paquet ${driver}). Vous pouvez préférer garder le paquet installé "
 "(par exemple pour piloter une autre carte), mais dans ce cas, la carte "
-"graphique ci-dessus ne sera pas utilisable."
+"graphique suivante ne sera pas utilisable :"
 
 #. Type: boolean
 #. Description
@@ -65,6 +62,8 @@ msgid ""
 "Before the ${free_name} driver can be used you must remove ${vendor} "
 "configuration from xorg.conf (and xorg.conf.d/)."
 msgstr ""
-"Avant de pouvoir l'utiliser, il est nécessaire de supprimer la configuration "
+"Avant de pouvoir utiliser le pilote ${free_name}, il est nécessaire de "
+"supprimer la configuration "
 "de ${vendor} dans le fichier xorg.conf (ou dans un des fichiers de xorg.conf."
 "d/)."
+
