bug-script: run xrandr
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5106 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (340.46-3) UNRELEASED; urgency=medium
 
   * Updated French (fr) debconf translations by Christian Perrier.
+  * bug-script: Run xrandr, if possible.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 21 Oct 2014 13:49:13 +0200
 
