--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nvidia-graphics-drivers (340.46-3) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.46-3) unstable; urgency=medium
 
   * Updated French (fr) debconf translations by Christian Perrier.
   * bug-script: Run xrandr, if possible.
   * nvidia-driver: Depend on libegl1-nvidia and recommend libgles[12]-nvidia.
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 21 Oct 2014 13:49:13 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 22 Oct 2014 00:09:17 +0200
 
 nvidia-graphics-drivers (340.46-2) unstable; urgency=medium
 
