--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (343.22-2) UNRELEASED; urgency=medium
+
+  * Split nvidia-driver-bin from the metapackage nvidia-driver.
+
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 29 Oct 2014 10:24:50 +0100
+
 nvidia-graphics-drivers (343.22-1) experimental; urgency=medium
 
   * New upstream short lived branch release 343.22 (2014-09-18).
