stop shipping nvidia-persistenced
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/343@5123 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 nvidia-graphics-drivers (343.22-2) UNRELEASED; urgency=medium
 
+  * nvidia-driver: Stop shipping nvidia-persistenced, this is being moved to a
+    separate source package.
   * Split nvidia-driver-bin from the metapackage nvidia-driver.
   * nvidia-driver-bin: Support switching via nvidia-alternative.
   * d/rules: Add #!armhf# and #!legacy# substitutions.
