--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (343.22-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (343.22-2) experimental; urgency=medium
 
   * nvidia-driver: Stop shipping nvidia-persistenced, this is being moved to a
     separate source package.
@@ -6,7 +6,7 @@ nvidia-graphics-drivers (343.22-2) UNRELEASED; urgency=medium
   * nvidia-driver-bin: Support switching via nvidia-alternative.
   * d/rules: Add #!armhf# and #!legacy# substitutions.
 
- -- Andreas Beckmann <anbe@debian.org>  Wed, 29 Oct 2014 10:24:50 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 29 Oct 2014 11:53:09 +0100
 
 nvidia-graphics-drivers (343.22-1) experimental; urgency=medium
 
