--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ nvidia-graphics-drivers (340.46-4) UNRELEASED; urgency=medium
 
   * Fix installation of nvidia-smi.  (Closes: #766343)
   * Add more dependencies on nvidia-alternative. 
+  * d/rules: Add #!armhf# and #!legacy# substitutions.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 23 Oct 2014 14:57:29 +0200
 
