support switching nvidia-driver-bin via nvidia-alternative
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5132 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ nvidia-graphics-drivers (340.46-4) UNRELEASED; urgency=medium
   * nvidia-driver: Stop shipping nvidia-persistenced, this is being moved to a
     separate source package.
   * Split nvidia-driver-bin from the metapackage nvidia-driver.
+  * nvidia-driver-bin: Support switching via nvidia-alternative.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 23 Oct 2014 14:57:29 +0200
 
