finalize changelog for nvidia-graphics-drivers (340.46-4)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5133 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (340.46-4) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.46-4) unstable; urgency=medium
 
   * Fix installation of nvidia-smi.  (Closes: #766343)
   * Add more dependencies on nvidia-alternative. 
@@ -8,7 +8,7 @@ nvidia-graphics-drivers (340.46-4) UNRELEASED; urgency=medium
   * Split nvidia-driver-bin from the metapackage nvidia-driver.
   * nvidia-driver-bin: Support switching via nvidia-alternative.
 
- -- Andreas Beckmann <anbe@debian.org>  Thu, 23 Oct 2014 14:57:29 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 30 Oct 2014 23:43:37 +0100
 
 nvidia-graphics-drivers (340.46-3) unstable; urgency=medium
 
