--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ nvidia-graphics-drivers (340.58-1) UNRELEASED; urgency=medium
       be used to disallow use of GLX protocol.  See "Appendix B. X Config
       Options" in the README for more details.
   * Update nv-readme.ids.
+  * nvidia-driver-bin: Breaks+Replaces nvidia-glx from wheezy.
   * New Dutch (nl) debconf translations by Frans Spiesschaert.
     (Closes: #767492)
   * README.source: Document the nks-history.git repository.
