--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ nvidia-graphics-drivers (340.58-1) UNRELEASED; urgency=medium
       Options" in the README for more details.
   * Update nv-readme.ids.
   * nvidia-driver-bin: Breaks+Replaces nvidia-glx from wheezy.
+  * nvidia-alternative: Ship /usr/share/nvidia (slave alternative location).
   * New Dutch (nl) debconf translations by Frans Spiesschaert.
     (Closes: #767492)
   * README.source: Document the nks-history.git repository.
