--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (340.46-5) UNRELEASED; urgency=medium
 
   * nvidia-driver-bin: Breaks+Replaces nvidia-glx from wheezy.
+  * libgles2-nvidia: Fix the SONAME symlink.
   * nvidia-alternative: Ship /usr/share/nvidia (slave alternative location).
   * New Dutch (nl) debconf translations by Frans Spiesschaert.
     (Closes: #767492)
