--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (340.46-6) UNRELEASED; urgency=medium
+
+  * nvidia-kernel-dkms: Switch to Recommends: nvidia-driver | libcuda1
+    to break the chain libcuda1 -> nvidia-kernel-dkms -> nvidia-driver.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 23 Nov 2014 01:43:58 +0100
+
 nvidia-graphics-drivers (340.46-5) unstable; urgency=medium
 
   * nvidia-driver-bin: Breaks+Replaces nvidia-glx from wheezy.
