--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ nvidia-graphics-drivers (340.46-6) UNRELEASED; urgency=medium
 
   * nvidia-kernel-dkms: Switch to Recommends: nvidia-driver | libcuda1
     to break the chain libcuda1 -> nvidia-kernel-dkms -> nvidia-driver.
+  * nvidia-opencl-icd: Downgrade the Depends: libcuda1 to Suggests. This
+    should avoid pulling in too many NVIDIA packages on wheezy -> jessie
+    upgrades of systems that have no NVIDIA hardware, but nvidia-opencl-icd
+    installed nevertheless.  (Closes: #769072, #770588, #769191)
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 23 Nov 2014 01:43:58 +0100
 
@@ -20,7 +24,7 @@ nvidia-graphics-drivers (340.46-5) unstable; urgency=medium
 nvidia-graphics-drivers (340.46-4) unstable; urgency=medium
 
   * Fix installation of nvidia-smi.  (Closes: #766343)
-  * Add more dependencies on nvidia-alternative. 
+  * Add more dependencies on nvidia-alternative.
   * d/rules: Add #!armhf# and #!legacy# substitutions.
   * nvidia-driver: Stop shipping nvidia-persistenced, this is being moved to a
     separate source package.
