--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-kernel (346.16-1) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (346.16-1) UNRELEASED; urgency=medium
 
   * New upstream beta 346.16 (2014-11-13).
     - Fixed a bug that caused a blank screen when setting a mode requiring YUV
@@ -52,6 +52,7 @@ nvidia-kernel (346.16-1) UNRELEASED; urgency=medium
       in UnrealEngine 4 applications. This issue is known as the "disco bug"
       by the UnrealEngine 4 Linux community.
   * Update nv-readme.ids.
+  * Refresh patches.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 22 Nov 2014 22:51:08 +0100
 
