--- a/debian/changelog
+++ b/debian/changelog
@@ -53,6 +53,7 @@ nvidia-graphics-drivers (346.16-1) UNRELEASED; urgency=medium
       by the UnrealEngine 4 Linux community.
   * Update nv-readme.ids.
   * Refresh patches.
+  * Update symbols control files.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 22 Nov 2014 22:51:08 +0100
 
