--- a/debian/TODO
+++ b/debian/TODO
@@ -1,3 +1,7 @@
+Consider renaming nvidia-opencl-icd to nvidia-icd (or similar) and make
+nvidia-opencl-icd a dummy package that at most Suggests: nvidia-icd.
+cf. #769072
+
 Goals for jessie:
 =================
 
